--- a/views/base.twig
+++ b/views/base.twig
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Professor</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-{{role}}
-{{nameAndSurname}}
-{{indexAndAverage}}
-{{studying}}
+    {% block content %}{% endblock %}
 </body>
 </html>
