added Code style configuration

--- a/views/error.twig
+++ b/views/error.twig
@@ -2,5 +2,7 @@
 
 {% block title %}Error{% endblock %}
 {% block content %}
-    <h1><center>Error code {{ code }}</center></h1><br>
+    <h1>
+        <center>Error code {{ code }}</center>
+    </h1><br>
 {% endblock %}
