--- a/views/home.twig
+++ b/views/home.twig
@@ -2,5 +2,7 @@
 
 {% block title %}Homepage{% endblock %}
 {% block content %}
-    <h1><center>This is homepage</center></h1><br>
+    <h1>
+        <center>This is homepage</center>
+    </h1><br>
 {% endblock %}
