--- a/views/studentId.twig
+++ b/views/studentId.twig
@@ -2,5 +2,7 @@
 
 {% block title %}Student id: {{ id }}{% endblock %}
 {% block content %}
-    <h1><center>Student id: {{ id }}</center></h1><br>
+    <h1>
+        <center>Student id: {{ id }}</center>
+    </h1><br>
 {% endblock %}
