--- a/views/professor.twig
+++ b/views/professor.twig
@@ -2,7 +2,9 @@
 
 {% block title %}Professor{% endblock %}
 {% block content %}
-    <h1><center>{{ professor.role() }}</center></h1><br>
+    <h1>
+        <center>{{ professor.role() }}</center>
+    </h1><br>
     Name: {{ professor.name }}<br>
     Surname: {{ professor.surName }}<br>
     Number of scientific work: {{ professor.numberOfScientificWork }}<br>
