--- a/views/student.twig
+++ b/views/student.twig
@@ -2,7 +2,9 @@
 
 {% block title %}Student{% endblock %}
 {% block content %}
-    <h1><center>{{ student.role() }}</center></h1><br>
+    <h1>
+        <center>{{ student.role() }}</center>
+    </h1><br>
     Name: {{ student.name }}<br>
     Surname: {{ student.surName }}<br>
     Index number: {{ student.indexNo }}<br>
